# server/libs/domain/src/asset/asset.core.ts
@@ -1,0 +1,21 @@
+import { AssetEntity, AssetType } from '@app/infra/db/entities';
+import { ISearchRepository, SearchCollection } from '../search';
+import { AssetSearchOptions, IAssetRepository } from './asset.repository';
+
+export class AssetCore {
+  constructor(private repository: IAssetRepository, private searchRepository: ISearchRepository) {}
+
+  getAll(options: AssetSearchOptions) {
+    return this.repository.getAll(options);
+  }
+
+  async save(asset: Partial<AssetEntity>) {
+    const _asset = await this.repository.save(asset);
+    await this.searchRepository.index(SearchCollection.ASSETS, _asset);
+    return _asset;
+  }
+
+  findLivePhotoMatch(livePhotoCID: string, type: AssetType, otherAssetId: string): Promise<AssetEntity | null> {
+    return this.repository.findLivePhotoMatch(livePhotoCID, type, otherAssetId);
+  }
+}
