# server/libs/domain/src/search/dto/search.dto.ts
@@ -1,0 +1,8 @@
+import { IsNotEmpty, IsOptional, IsString } from 'class-validator';
+
+export class SearchDto {
+  @IsString()
+  @IsNotEmpty()
+  @IsOptional()
+  query?: string;
+}
