# server/libs/domain/src/search/response-dto/search-response.dto.ts
@@ -1,0 +1,4 @@
+export class SearchResponseDto {
+  albums!: any;
+  assets!: any;
+}
